fixed spacing on chat area

--- a/app/assets/stylesheets/chat.css.scss
+++ b/app/assets/stylesheets/chat.css.scss
@@ -11,5 +11,13 @@ li {
 }
 
 #chatButton {
-  padding-top: 40px;
+  padding-top: 25px;
+}
+
+#chat{
+  margin-bottom: 100px;
+}
+
+textarea{
+  resize: none;
 }
